<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3B4A6A"
    tools:context="com.waldemlav.weatherapp.ui.WeatherFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3B4A6A">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/weather_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="#3B4A6A"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-light"
                android:text="@string/no_data_2"
                android:textColor="@color/white"
                android:textSize="34sp" />

        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/tv_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="96sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_temp"
            app:layout_constraintEnd_toStartOf="@+id/tv_temp"
            app:layout_constraintTop_toTopOf="@+id/tv_temp" />

        <TextView
            android:id="@+id/tv_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="88dp"
            android:text="@string/no_data"
            android:textColor="@color/white"
            android:textSize="96sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weather_toolbar" />

        <TextView
            android:id="@+id/tv_temp_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="\u2103"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/tv_temp"
            app:layout_constraintTop_toTopOf="@+id/tv_temp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/tv_weather_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/weather_no_data_text"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_temp"
            app:layout_constraintStart_toStartOf="@+id/tv_temp"
            app:layout_constraintTop_toBottomOf="@+id/tv_temp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_aqi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardBackgroundColor="#607490"
            app:cardCornerRadius="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_weather_description">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_aqi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/ic_aqi"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/tv_aqi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/weather_aqi_no_data_text"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/iv_aqi"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_forecast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="32dp"
            app:layoutManager="LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_aqi" />

        <Button
            android:id="@+id/btn_forecast"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:background="@drawable/roundedbutton"
            android:text="@string/weather_forecast_text"
            app:backgroundTint="#607490"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_forecast" />

        <TextView
            android:id="@+id/tv_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/weather_details_text"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/rv_forecast"
            app:layout_constraintEnd_toStartOf="@+id/iv_details" />

        <ImageView
            android:id="@+id/iv_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_details"
            app:layout_constraintBottom_toBottomOf="@+id/tv_details"
            app:layout_constraintEnd_toEndOf="@+id/rv_forecast"
            app:layout_constraintTop_toTopOf="@+id/tv_details"
            tools:ignore="ContentDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>